# omni-collect

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
src/omni_collect/: __init__.py  config.py  database.py  main.py
src/omni_collect/models/: db.py  schemas.py
tests/: test_health.py
